--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -56,6 +56,89 @@ html[data-theme="dark"]
 .justifiedLayout .queryBuilder .control + button.rule-remove,
 .justifiedLayout .queryBuilder .chakra-select__wrapper + button.rule-cloneRule,
 .justifiedLayout .queryBuilder .chakra-select__wrapper + button.rule-lock,
-.justifiedLayout .queryBuilder .chakra-select__wrapper + button.rule-remove {
-  margin-left: auto !important;
+
+
+.ruleGroup-body {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: left;
+}
+.queryBuilder {
+  min-width: 420px;
+  background: #f9f9f9;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.queryBuilder .ruleGroup {
+  border: 1px solid #e1e1e1;
+  padding: 10px;
+  margin-top: 10px;
+  background: rgba(54, 82, 190, 0.2);
+  border-radius: 6px;
+}
+
+.queryBuilder .ruleGroup-header,
+.queryBuilder .rule {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.queryBuilder button {
+  background-color: #4a90e2;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.queryBuilder .ruleGroup-remove, .queryBuilder .rule-remove {
+  background-color: #e74c3c; /* Red color */
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.queryBuilder .ruleGroup-remove:hover, .queryBuilder .rule-remove:hover {
+  background-color: #c0392b; /* Darker shade for hover state */
+}
+
+
+.queryBuilder button:hover {
+  background-color: #3b7dbb;
+}
+
+.queryBuilder select,
+.queryBuilder input {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 8px;
+  width: 100%;
+}
+
+.queryBuilder .rule-value {
+  flex-grow: 1;
+}
+
+
+
+/* Responsive adjustments */
+@media (max-width: 600px) {
+  .queryBuilder {
+    min-width: auto;
+    padding: 5px;
+  }
+
+  .queryBuilder .ruleGroup-header,
+  .queryBuilder .rule {
+    flex-direction: column;
+    align-items: stretch;
+  }
 }
