--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -36,13 +36,15 @@ a:hover {
     align-items: center;
     justify-content: center;
   }
-}
 
-.ruleGroup {
-  display: flex;
-  width: 100%;
-  gap: var(--chakra-space-2);
-  flex-direction: column;
+  .ruleGroup {
+    display: flex;
+    width: 100%;
+    gap: var(--chakra-space-2);
+    flex-direction: column;
+    background: white;
+    border-style: none;
+  }
 }
 
 .ruleGroup-header {
