MARS-1126 Complete integration of new components

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -204,7 +204,7 @@ body .w-md-editor-text {
   }
 }
 
-/* Custom scrollbar styles for DataTableRemix */
+/* Custom scrollbar styles for DataTable */
 .data-table-scroll-container {
   /* For Webkit browsers (Chrome, Safari, Edge) */
   &::-webkit-scrollbar {
